# wat-2025-english2indic-mmt

./: .gitignore  FINETUNING_QUICKSTART.md  LICENSE  Makefile  README.md  activate_env.sh  clean_data.py  combine_datasets.py  crop_images.py  env.example  pyproject.toml  run_training.sh  run_training_original.sh  task_description.txt  test_training.sh  wat-2025-english2indic-mmt.code-workspace
cleaned_data/: checkpoint.json  results_partial.csv
cleaned_data_old/: checkpoint.json  results_partial.csv
combined_data/: combined_challenge.csv  combined_dev.csv  combined_test.csv
combined_processed_data/cleaned_data/: checkpoint.json  cleaned_data.csv  results_partial.csv  statistics.json
combined_processed_data/cleaned_data_kushan/: checkpoint.json
combined_processed_data/cleaned_data_kushan_latest/: checkpoint.json
examples/: finetune_example.sh  inference_example.py
src/wat_mmt/: __init__.py
src/wat_mmt/data_cleaner/: README.md  __init__.py  corrector.py  judge.py  pipeline.py  translator.py  utils.py
src/wat_mmt/data_cleaner/prompts/: judge_prompt.txt  visual_correction_prompt.txt
src/wat_mmt/finetuning/: README.md  __init__.py  config.py  data_processor.py  finetune.py  inference.py
tests/: __init__.py  test_basic.py
