[project]
name = "wat-2025-english2indic-mmt"
version = "0.1.0"
description = "WAT 2025 English to Indic Multimodal Translation"
authors = [
    {name = "Siddharth Betala", email = "betalas5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.3.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sarvamai>=0.1.21",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wat_mmt"]

[tool.pytest.ini_options]
pythonpath = ["src"]

# Ruff global configuration for linting & formatting
# --------------------------------------------------------
[tool.ruff]
# Target Python version
target-version = "py311"

# Line length (black formatter convention)
line-length = 80

[tool.ruff.lint]
# Ruff-specific rules (`RUF`), isort (`I`), pycodestyle (`E`), and more common rulesets
select = ["E", "F", "I", "N", "UP", "RUF"]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Quote style
quote-style = "double"
# Indent style
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"*.ipynb" = ["E501"]
